tests/cases/negative/typing/types/incorrectTypeForLambda.lam
-- we should be able to see that the 'Type 0' and 'Level' types do not match here
test : Unit -> Unit
test = \(x : Type 0) -> unit
